infrastructure/llamacpp/llamacpp-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llamacpp
spec:
  serviceName: llamacpp
  selector:
    matchLabels:
      app: llamacpp
  template:
    metadata:
      labels:
        app: llamacpp
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node.mmontes.io/type
        value: compute-xlarge

      containers:
      - name: llama-server
        image: ghcr.io/ggml-org/llama.cpp:full-cuda13-b10499
        command:
          - /bin/bash
        args:
          - /config/bench.sh

        ports:
        - containerPort: 8080
          name: api
        resources:
          requests:
            cpu: "1"
            memory: 8Gi
          limits:
            memory: 24Gi
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
        - name: models
          mountPath: /models
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10

      volumes:
      - name: config
        configMap:
          name: llamacpp
          defaultMode: 0777

  volumeClaimTemplates:
  - metadata:
      name: models
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 300Gi
      storageClassName: topolvm
