infrastructure/llamacpp/llamacpp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: llamacpp
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "llamacpp.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: llamacpp
          port: 8080
